# pice

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
scripts/win_cross_compile/: README.md  build.sh  install_windows_deps.sh  package.sh
src/: config.rs  icon.rc  load_handler.rs  main.rs  passgen.rs
src/resources/css/: input.css  main.css
src/resources/css/theme/: nord.css
src/resources/html/: index.htm  passgen.htm
src/resources/tis/: main.tis  passgen.tis
utils/: package_unix.sh
utils/darwin/: build.sh  package.sh
utils/darwin/package/: Info.plist  pice.icns
utils/linux/: build.sh  package.sh
utils/linux/package/: install.sh  pice.desktop  uninstall.sh
utils/windows/: build.sh  package.sh
