[package]
name = "pice"
version = "0.1.0"
authors = ["Patrick Chan <16124030+pchan37@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
pretty_env_logger = "0.4"
rand = "0.8"
vgtk = { git = "https://github.com/bodil/vgtk" }
